syntax = "proto3";

package api;

option java_package = "com.glonassmobile.toesim.client.api";

import "codebase.proto";
import "shared.proto";

service Device {
    rpc deleteDevice (DeleteDeviceRequest) returns (DeleteDeviceResponse);
    rpc renameDevice (RenameDeviceRequest) returns (RenameDeviceResponse);
    rpc listDevices (Empty) returns (ListDevicesResponse);
}

message DeleteDeviceRequest {
    string deviceId = 1;
}

message DeleteDeviceResponse {

    message SuccessModel {
    }

    oneof response {
        Empty success = 1;
        string invalidRequest = 2;
        Empty unauthorized = 3;
        Empty deviceNotFound = 4;
    }
}

message RenameDeviceRequest {
    string deviceId = 1;

    string name = 2;
}

message RenameDeviceResponse {

    oneof response {
        Empty success = 1;
        string invalidRequest = 2;
        Empty unauthorized = 3;
        Empty deviceNotFound = 4;
    }
}

message ListDevicesResponse {

    message SuccessModel {

        message DeviceModel {

            message PackModel {

                message RateModel {
                    string rateId = 1;
                    string countryName = 2;
                    string countryCode = 3;
                    string operatorName = 4;
                    double price = 5;
                }

                RateModel rate = 1;
                double price = 2;
                PACK_DURATION duration = 3;
                int64 quota = 4;
                int64 used = 5;
                int64 boughtDate = 6;
                Empty current = 7;
            }

            string deviceId = 1;
            int64 created = 2;
            StringValue name = 3;
            string lpaUrl = 4;   
            PackModel currentPack = 5;
            repeated PackModel packs = 6;     
        }

        repeated DeviceModel devices = 1;
    }

    oneof response {
        SuccessModel success = 1;
        Empty unauthorized = 2;
    }
}
